# KLC

./: .gitignore  LICENSE
altro/: klc.ipynb
klc_project/: README.md  dataset.csv  main.py  pyproject.toml
klc_project/code/: ffunctions.py  fnotebook.ipynb  ml_functions.py  notebook.html  notebook.ipynb
klc_project/code/old_code/: ml_functions.py  nb.ipynb  notebook.ipynb
klc_project/my_code/: __init__.py  data.py  kernel_models.py  models.py  visuals.py
